--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    <View
-        android:id="@+id/imvStory"
-        android:background="@drawable/bg_grid"
-        android:backgroundTint="@color/color_hint"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_140sdp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txtTitleStory"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
-        tools:text="Cổ chân nhân"
-        style="@style/TextStyleSemibold"
-        android:maxLines="2"
-        android:ellipsize="end"
-        app:layout_constraintTop_toBottomOf="@+id/imvStory"
-        app:layout_constraintStart_toStartOf="@+id/imvStory"
-        app:layout_constraintEnd_toEndOf="@+id/imvStory"/>
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_4sdp"
-        tools:text="Tiên hiệp"
-        style="@style/TextStyleMedium"
-        android:textSize="@dimen/_10ssp"
-        android:textColor="@color/color_hint"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitleStory"
-        app:layout_constraintStart_toStartOf="@+id/txtTitleStory"/>
+<layout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <View
+            android:id="@+id/imvStory"
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="@dimen/_140sdp"
+            android:background="@drawable/bg_grid"
+            android:backgroundTint="@color/color_hint"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/txtTitleStory"
+            style="@style/TextStyleSemibold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            app:layout_constraintEnd_toEndOf="@+id/imvStory"
+            app:layout_constraintStart_toStartOf="@+id/imvStory"
+            app:layout_constraintTop_toBottomOf="@+id/imvStory"
+            tools:text="Cổ chân nhân" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            style="@style/TextStyleMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:textColor="@color/color_hint"
+            android:textSize="@dimen/_10ssp"
+            app:layout_constraintStart_toStartOf="@+id/txtTitleStory"
+            app:layout_constraintTop_toBottomOf="@+id/txtTitleStory"
+            tools:text="Tiên hiệp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
