--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -36,8 +36,10 @@
             app:layout_constraintTop_toBottomOf="@+id/txtTitleHome" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rccHome"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginHorizontal="@dimen/_15sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
