--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -6,15 +6,20 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
-        <View
+        
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imvStory"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_140sdp"
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_100sdp"
             android:background="@drawable/bg_grid"
-            android:backgroundTint="@color/color_hint"
+            tools:src="@drawable/avatar_test"
+            android:scaleType="fitXY"
+            android:clipToOutline="true"
+            android:layout_marginHorizontal="@dimen/_10sdp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtTitleStory"
@@ -30,6 +35,7 @@
             tools:text="Cổ chân nhân" />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/txtType"
             style="@style/TextStyleMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
