--- a/app/src/main/res/layout/item_type.xml
+++ b/app/src/main/res/layout/item_type.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
@@ -6,16 +7,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txtType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingVertical="@dimen/_5sdp"
         android:paddingHorizontal="@dimen/_10sdp"
         tools:text="@string/text_quan_truong_item_type"
-        tools:background="@drawable/bg_item_type"
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:background="@drawable/bg_item_type"
         android:textColor="@color/white"
         android:gravity="center"
         style="@style/TextStyleReguler"
-        android:textSize="@dimen/_14ssp"
+        android:textSize="@dimen/_9ssp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,3 +26,4 @@
         />
 
 </FrameLayout>
+</layout>
