--- a/app/src/main/res/layout/layout_grid_adapter.xml
+++ b/app/src/main/res/layout/layout_grid_adapter.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txtTitleGrid"
@@ -41,8 +42,11 @@
         app:layout_constraintBottom_toBottomOf="@+id/txtTitleGrid"
         app:layout_constraintTop_toTopOf="@+id/txtTitleGrid"/>
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
+        android:id="@+id/rccGrid"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/txtTitleGrid"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,3 +57,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
